--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -147,8 +147,18 @@ OBJS= \
     obj/groestl.o\
     obj/jh.o\
     obj/keccak.o\
-    obj/skein.o
-
+    obj/skein.o \
+    obj/luffa.o \
+    obj/cubehash.o \
+    obj/shavite.o \
+    obj/echo.o \
+    obj/simd.o \
+    obj/hamsi.o \
+    obj/fugue.o \
+    obj/shabal.o \
+    obj/whirlpool.o \
+    obj/haval.o \
+    obj/sha2big.o
 
 	
 
